# claude-sessions-gui

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gestionnaire-sessions-claude-features.md  index.html  package.json  pnpm-lock.yaml
.claude/skills/commit/: SKILL.md
.claude/skills/create-release/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CompactView.vue  ContextMenu.vue  EmptyState.vue  MessageView.vue  SessionRow.vue  SettingsModal.vue  Sidebar.vue  TitleBar.vue  Toast.vue  TopBar.vue  TranscriptViewer.vue
src/composables/: useSessions.ts  useSettings.ts  useTheme.ts  useTranscript.ts
src/lib/: colors.ts  diff.ts  format.ts  markdown.ts  sort.ts
src/styles/: theme.css
