[package]
name = "claude-sessions"
version = "0.1.0"
description = "Local browser & launcher for Claude Code sessions"
authors = ["Olivier Mattei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_sessions_lib"
# Desktop-only build: a plain rlib is linked statically into the binary.
# (staticlib/cdylib are only needed for mobile targets and, under the GNU
# toolchain, the cdylib trips ld's "export ordinal too large" limit.)
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
trash = "5"
